src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>BillCode__c</fullName>
        <externalId>true</externalId>
        <label>BillCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cache</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalPriceWithDiscount__c</fullName>
        <formula>TotalPrice__c * (1- Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price With Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TotalPrice__c</columns>
        <columns>Discount__c</columns>
        <columns>TotalPriceWithDiscount__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>PaymentMethod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bill</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>